fix floatyballs overflowing issue

--- a/src/components/solid/FloatyBalls/styles.module.css
+++ b/src/components/solid/FloatyBalls/styles.module.css
@@ -2,6 +2,7 @@
     position: absolute;
     inset: 0;
     z-index: -1;
+    overflow: hidden;
 }
 
 .floatyball {
