--- a/src/components/solid/FloatyBallsController/index.module.css
+++ b/src/components/solid/FloatyBallsController/index.module.css
@@ -4,12 +4,15 @@
     left: 0;
     bottom: 0;
 
+    width: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     gap: 20px;
 
     padding: 5px;
+
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .header {
